fixed text overlap in pricing table

--- a/site/static/compiled/stylesheets/screen.css
+++ b/site/static/compiled/stylesheets/screen.css
@@ -109,6 +109,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 #pricing .box .price p {
   font-size: 3.5em;
   margin-top: 1rem;
+  line-height: 0.8em;
 }
 #pricing .box .price .note {
   margin: 0;
